--- a/index.html
+++ b/index.html
@@ -227,8 +227,7 @@
         </div>
         
         <div class="warning">
-            ⚠️ This is for educational purposes only. Do not use for malicious activities.
-        </div>
+            💯 Grab Offer Now </div>
     </div>
     
     <footer>
